Try to run consumer

--- a/text/master-thesis.tex
+++ b/text/master-thesis.tex
@@ -140,7 +140,7 @@ Jedna z nejdůležitějších kapitol, která ukazuje co způsobí, že aplikace
 Bude zde také zmíněno dynamické nasazování nových ep pravidel. To by se dalo shrnout pod nadpis "ovládání clusteru z venčí" - řešeno přes nastavování dat jednotlivým uzlům v zookeeperu.
 
 \subsection{Esper pravidla}
-Mini kapitola, kterou bych věnoval 
+Mini kapitola, kterou bych věnoval použitým esper pravidlům.
 
 \section{Známá omezení}
 Diskuse nedostatků nebo možných vylepšení výše navrženého řešení. 
